# ft_ls

./: CMakeLists.txt  Makefile  ft_ls  ttt
ft_ls.dSYM/Contents/Resources/DWARF/: ft_ls
inc/: ft_ls.h
libft/: Makefile  ft_atoi_r.c  ft_isspace.c  libft.h
printf/: Makefile  README.txt
printf/src/: check_if_param.c  colors.c  doubles.c  flags_handle.c  ft_printf.h  func_common.c  func_cs.c  func_dpb.c  func_xou.c  get_data.c  long_math.c  sort_data.c  treat_data.c  upgrade.c  upgrade2.c
src/: add_files.c  files.c  files_array.c  handle_error.c  main.c  print_files.c  print_l.c  read_flags.c  read_folders.c  sorting.c
